--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=    # Default H2 password (empty)
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 server.port=${PORT:10000}
-blog.secret = n1ghtcrawler
+blog.secret = YOUR_SECRET
 debug=true
